--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,26 +25,36 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.hackjunction.petra.ToDoApplication">
+        android:name="com.hackjunction.petra.PetraApplication">
+<!--        <activity-->
+<!--            android:name="com.hackjunction.petra.tasks.TasksActivity"-->
+<!--            android:theme="@style/AppTheme.OverlapSystemBar">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+<!--        <activity android:name="com.hackjunction.petra.taskdetail.TaskDetailActivity" />-->
+<!--        <activity android:name="com.hackjunction.petra.addedittask.AddEditTaskActivity" />-->
+<!--        <activity-->
+<!--            android:name="com.hackjunction.petra.statistics.StatisticsActivity"-->
+<!--            android:parentActivityName=".tasks.TasksActivity"-->
+<!--            tools:ignore="UnusedAttribute">-->
+<!--            &lt;!&ndash; Parent activity meta-data to support 4.0 and lower &ndash;&gt;-->
+<!--            <meta-data-->
+<!--                android:name="android.support.PARENT_ACTIVITY"-->
+<!--                android:value=".tasks.TasksActivity" />-->
+<!--        </activity>-->
         <activity
-            android:name="com.hackjunction.petra.tasks.TasksActivity"
+            android:name="com.hackjunction.petra.pets.PetsActivity"
             android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.hackjunction.petra.taskdetail.TaskDetailActivity" />
-        <activity android:name="com.hackjunction.petra.addedittask.AddEditTaskActivity" />
-        <activity
-            android:name="com.hackjunction.petra.statistics.StatisticsActivity"
-            android:parentActivityName=".tasks.TasksActivity"
-            tools:ignore="UnusedAttribute">
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".tasks.TasksActivity" />
-        </activity>
+        <activity android:name="com.hackjunction.petra.petdetail.PetDetailActivity" />
+        <activity android:name="com.hackjunction.petra.addeditpet.AddEditPetActivity" />
     </application>
 
 </manifest>
