--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ android {
  */
 dependencies {
     // App's dependencies, including test
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
