--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="com.hackjunction.petra.PetraApplication">
+
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD8dxqaTop_L4cKdWxwidDpUWs7A89khw8" />
+
 <!--        <activity-->
 <!--            android:name="com.hackjunction.petra.tasks.TasksActivity"-->
 <!--            android:theme="@style/AppTheme.OverlapSystemBar">-->
