--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
         <activity
+            android:screenOrientation="portrait"
             android:name="com.hackjunction.petra.pets.PetsActivity"
             android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
@@ -45,9 +46,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.hackjunction.petra.petdetail.PetDetailActivity" />
-        <activity android:name="com.hackjunction.petra.addeditpet.AddEditPetActivity" />
-        <activity android:name="com.hackjunction.petra.devices.DevicesActivity" />
+        <activity android:name="com.hackjunction.petra.petdetail.PetDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="com.hackjunction.petra.addeditpet.AddEditPetActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="com.hackjunction.petra.devices.DevicesActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
